[gd_scene load_steps=10 format=3 uid="uid://dh1xl3l1mvrti"]

[ext_resource type="Script" path="res://scripts/board.gd" id="1_2feio"]
[ext_resource type="Texture2D" uid="uid://4xfqh5ab1nqp" path="res://assets/board.png" id="2_0tn0e"]
[ext_resource type="Script" path="res://scripts/territory.gd" id="3_ag30u"]
[ext_resource type="Texture2D" uid="uid://du353aamsl7h0" path="res://assets/faction 0.png" id="4_ygexn"]
[ext_resource type="PackedScene" uid="uid://pwflgtmr2ak3" path="res://scenes/territory.tscn" id="5_3uboh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcovh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kcnpr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d0qa0"]
radius = 1702.94

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dljpx"]

[node name="Board_Main" type="Node"]
script = ExtResource("1_2feio")

[node name="Board" type="TextureRect" parent="."]
offset_left = 1.0
offset_top = -77.0
offset_right = 1921.0
offset_bottom = 1003.0
texture = ExtResource("2_0tn0e")
expand_mode = 1

[node name="Connections" type="Node2D" parent="."]

[node name="Continents" type="Node2D" parent="."]

[node name="North America" type="Node" parent="Continents"]

[node name="Alaska" type="Area2D" parent="Continents/North America"]
position = Vector2(95, 137)
scale = Vector2(0.01, 0.01)
script = ExtResource("3_ag30u")
metadata/_edit_group_ = true

[node name="SelectBox" type="Polygon2D" parent="Continents/North America/Alaska"]
visible = false
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, -2700, -1900, -1900, -2600, -100, -1900, 1800, 0, 2500, 1800, 1800, 2600, -100, 1800, -1900)

[node name="Sprite2D" type="Sprite2D" parent="Continents/North America/Alaska"]
texture = ExtResource("4_ygexn")

[node name="TerritoryName" type="Label" parent="Continents/North America/Alaska"]
offset_left = -1900.0
offset_top = 2100.0
offset_right = 1900.0
offset_bottom = 3500.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 1000
theme_override_styles/normal = SubResource("StyleBoxFlat_bcovh")

[node name="HoverInfo" type="Label" parent="Continents/North America/Alaska"]
visible = false
offset_left = 2000.0
offset_top = 1200.0
offset_right = 6254.0
offset_bottom = 3385.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 1000
theme_override_styles/normal = SubResource("StyleBoxFlat_kcnpr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Continents/North America/Alaska"]
shape = SubResource("CircleShape2D_d0qa0")

[node name="TroopCount" type="Label" parent="Continents/North America/Alaska"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -681.0
offset_right = 20.0
offset_bottom = 681.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 1000
theme_override_styles/normal = SubResource("StyleBoxFlat_dljpx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Northwest Territory" parent="Continents/North America" instance=ExtResource("5_3uboh")]
position = Vector2(257, 134)

[node name="Greenland" parent="Continents/North America" instance=ExtResource("5_3uboh")]
position = Vector2(608, 92)

[node name="Alberta" parent="Continents/North America" instance=ExtResource("5_3uboh")]
position = Vector2(240, 200)

[node name="Ontario" parent="Continents/North America" instance=ExtResource("5_3uboh")]
position = Vector2(368, 222)

[node name="Eastern Canada" parent="Continents/North America" instance=ExtResource("5_3uboh")]
position = Vector2(482, 240)

[node name="Western United States" parent="Continents/North America" instance=ExtResource("5_3uboh")]
position = Vector2(248, 311)

[node name="Eastern United States" parent="Continents/North America" instance=ExtResource("5_3uboh")]
position = Vector2(388, 327)

[node name="Central America" parent="Continents/North America" instance=ExtResource("5_3uboh")]
position = Vector2(245, 417)

[node name="South America" type="Node" parent="Continents"]

[node name="Venezuela" parent="Continents/South America" instance=ExtResource("5_3uboh")]
position = Vector2(376, 523)

[node name="Brazil" parent="Continents/South America" instance=ExtResource("5_3uboh")]
position = Vector2(514, 610)

[node name="Peru" parent="Continents/South America" instance=ExtResource("5_3uboh")]
position = Vector2(396, 645)

[node name="Argentina" parent="Continents/South America" instance=ExtResource("5_3uboh")]
position = Vector2(426, 744)

[node name="Africa" type="Node" parent="Continents"]

[node name="North Africa" parent="Continents/Africa" instance=ExtResource("5_3uboh")]
position = Vector2(819, 577)

[node name="Egypt" parent="Continents/Africa" instance=ExtResource("5_3uboh")]
position = Vector2(942, 533)

[node name="East Africa" parent="Continents/Africa" instance=ExtResource("5_3uboh")]
position = Vector2(1023, 614)

[node name="Central Africa" parent="Continents/Africa" instance=ExtResource("5_3uboh")]
position = Vector2(953, 683)

[node name="South Africa" parent="Continents/Africa" instance=ExtResource("5_3uboh")]
position = Vector2(976, 818)

[node name="Madagascar" parent="Continents/Africa" instance=ExtResource("5_3uboh")]
position = Vector2(1128, 829)

[node name="Europe" type="Node" parent="Continents"]

[node name="Iceland" parent="Continents/Europe" instance=ExtResource("5_3uboh")]
position = Vector2(746, 185)

[node name="Great Britain" parent="Continents/Europe" instance=ExtResource("5_3uboh")]
position = Vector2(725, 281)

[node name="Scandinavia" parent="Continents/Europe" instance=ExtResource("5_3uboh")]
position = Vector2(869, 194)

[node name="Russia" parent="Continents/Europe" instance=ExtResource("5_3uboh")]
position = Vector2(1030, 242)

[node name="Northern Europe" parent="Continents/Europe" instance=ExtResource("5_3uboh")]
position = Vector2(874, 315)

[node name="Southern Europe" parent="Continents/Europe" instance=ExtResource("5_3uboh")]
position = Vector2(917, 391)

[node name="Western Europe" parent="Continents/Europe" instance=ExtResource("5_3uboh")]
position = Vector2(739, 431)

[node name="Asia" type="Node" parent="Continents"]

[node name="Ural" parent="Continents/Asia" instance=ExtResource("5_3uboh")]
position = Vector2(1221, 197)

[node name="Siberia" parent="Continents/Asia" instance=ExtResource("5_3uboh")]
position = Vector2(1320, 153)

[node name="Yakutsk" parent="Continents/Asia" instance=ExtResource("5_3uboh")]
position = Vector2(1447, 102)

[node name="Kamchatka" parent="Continents/Asia" instance=ExtResource("5_3uboh")]
position = Vector2(1592, 125)

[node name="Irkutsk" parent="Continents/Asia" instance=ExtResource("5_3uboh")]
position = Vector2(1441, 217)

[node name="Mongolia" parent="Continents/Asia" instance=ExtResource("5_3uboh")]
position = Vector2(1454, 304)

[node name="China" parent="Continents/Asia" instance=ExtResource("5_3uboh")]
position = Vector2(1393, 406)

[node name="Japan" parent="Continents/Asia" instance=ExtResource("5_3uboh")]
position = Vector2(1654, 315)

[node name="Afghanistan" parent="Continents/Asia" instance=ExtResource("5_3uboh")]
position = Vector2(1206, 340)

[node name="India" parent="Continents/Asia" instance=ExtResource("5_3uboh")]
position = Vector2(1295, 474)

[node name="Southeast Asia" parent="Continents/Asia" instance=ExtResource("5_3uboh")]
position = Vector2(1446, 510)

[node name="Middle East" parent="Continents/Asia" instance=ExtResource("5_3uboh")]
position = Vector2(1079, 480)

[node name="Australia" type="Node" parent="Continents"]

[node name="Indonesia" parent="Continents/Australia" instance=ExtResource("5_3uboh")]
position = Vector2(1484, 694)

[node name="New Guinea" parent="Continents/Australia" instance=ExtResource("5_3uboh")]
position = Vector2(1657, 641)

[node name="Western Australia" parent="Continents/Australia" instance=ExtResource("5_3uboh")]
position = Vector2(1582, 828)

[node name="Eastern Australia" parent="Continents/Australia" instance=ExtResource("5_3uboh")]
position = Vector2(1738, 794)

[connection signal="input_event" from="Continents/North America/Alaska" to="Continents/North America/Alaska" method="_on_input_event"]
[connection signal="mouse_entered" from="Continents/North America/Alaska" to="Continents/North America/Alaska" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Continents/North America/Alaska" to="Continents/North America/Alaska" method="_on_mouse_exited"]
